--- a/src/app/gifs/pages/trending-page/trending-page.component.html
+++ b/src/app/gifs/pages/trending-page/trending-page.component.html
@@ -1,3 +1,4 @@
 <section class="py-5">
-    <gif-list [gifs]="images" />    
+    <!-- <gif-list [gifs]="images()" /> -->
+    <gif-list [gifs]="gifService.trendingGifs()" />
 </section>
