--- a/src/app/gifs/pages/search-page/search-page.component.html
+++ b/src/app/gifs/pages/search-page/search-page.component.html
@@ -4,7 +4,7 @@
 <section>
     <input 
         type="text" placeholder="Buscar Gifs" 
-        class="mt-3 border border-gray-300 rounded-md p-2" 
+        class="mt-3 border border-gray-300 rounded-md p-2 w-full" 
         #txtSearch 
         (keyup.enter)="onSearch(txtSearch.value)" 
     />
