--- a/src/app/gifs/pages/trending-page/trending-page.component.html
+++ b/src/app/gifs/pages/trending-page/trending-page.component.html
@@ -1,4 +1,21 @@
-<section class="py-5">
-    <!-- <gif-list [gifs]="images()" /> -->
+<!-- <section class="py-5">
+    <gif-list [gifs]="images()" /> 
     <gif-list [gifs]="gifService.trendingGifs()" />
-</section>
+</section> -->
+
+<div class="grid grid-cols-2 md:grid-cols-4 gap-4 pt-3 pb-3 h-screen overflow-y-scroll" 
+    #groupDiv (scroll)="onScroll($event)"
+>
+    @for (group of gifService.trendingGifsGroup(); track $index) {
+        <div class="grid gap-4">
+            @for (gif of group; track gif.id) {
+                <div>
+                    <img 
+                        class="h-auto w-full rounded-lg object-cover" 
+                        [src]="gif.url" 
+                        [alt]="gif.title">
+                </div>
+            }
+        </div>
+    }
+</div>
